   > Phantasmal Charm
   > Advanced Salvage Kit
   > Golden Tablet Piece (Left)
   > Golden Tablet Piece (Right)
   > Golden Tablet
   > Tellurium Pickaxe
   > Tellurium Pickaxe ★
   > Tellurium Pickaxe ★★
   > Tellurium Pickaxe ★★★
   > Magical Ocarina
   > Battle Cry
   > Old Key
   > Andrew's Ancient Crystal of The Trail's Amazing History
   > [REDACTED TROPHY]
   > [REDACTED TROPHY]
 - Added 72 new equipment items:
  ~ 13 weapons:
   > Shadowspec Sword
   > Shadowspec Warhammer
   > Unstoppable Force
   > Steel Greatsword
   > Draconic Wand
   > Void Crystal Staff
   > Knuckle Spikes
   > Life Crystal Staff
   > Mana Crystal Staff
   > Hero Sword Replica
   > Tellurium Wand
   > Harmony
   > Bloodlust ★★
  ~ 8 bodygear:
   > True Shadowplate Armor
   > True Phantasmal Robes
   > True Prayer Vestments
   > True Shadowspec Leathers
   > Tellurium Heavy Armor
   > Tellurium Robes
   > Tellurium Vestments
   > Tellurium Leathers
  ~ 4 headgear:
   > Dapper-Looking Hat
   > Bunny Hood
   > Dragon Scale Helmet
   > Sorrowful Headpiece
  ~ 6 footgear:
   > Hiking Boots ★★
   > Flower Boots
   > Padded Boots
   > Snow Boots
   > Trailblazing Boots
   > Trailblazing Boots ★
  ~ 7 shields:
   > Vishnu's Shield
   > Immovable Object
   > Turtle Shield
   > Tellurian Knight's Shield
   > Tellurian Knight's Bulwark
   > Vishnu's Aegis
   > Glacial Bulwark
  ~ 20 accessories:
   > Champion's Talisman
   > Soulstealer's Necklace
   > Vigilante's Charm
   > Storm Lens
   > Bat Sling
   > Giant Turtle Shell
   > Flytrap Fang
   > Flytrap Eye
   > Battle Plan
   > Forest Exploration Kit
   > Scaly Gloves
   > Dragonforce Gauntlets
   > Condensed Icy Gel
   > Warm Scarf
   > Snow Jacket
   > Snow Globe
   > Cloth Mask
   > Seshat's Charm
   > Seshat's Tome
   > Seshat's Opus
  ~ 8 magic equips:
   > Comet Charm
   > Magic Coin
   > Elemental Lace
   > Conjurer's Harp
   > Orb of Wrath
   > Orb of Protection
   > Dark Orb (Tome)
   > Wyvern's Fury (Tome)
  ~ 2 powers: