@@ -4362,5 +4362,74 @@
       0
     ],
     "price": 300
+  },
+  {
+    "id": 165,
+    "atypeId": 5,
+    "description": "A stylish silver headband with a cloth lining that makes it sit comfortably\naround one's head. Provides a decent increase to physical life steal.",
+    "etypeId": 3,
+    "traits": [],
+    "iconIndex": 460,
+    "name": "Silver Headband",
+    "note": "<Upgrade Slots: 2>\n<HP Life Steal Physical: +1.5%>",
+    "params": [
+      10,
+      0,
+      0,
+      0,
+      0,
+      0,
+      5,
+      0
+    ],
+    "price": 1000
+  },
+  {
+    "id": 166,
+    "atypeId": 5,
+    "description": "A tough silver mask lined with fine leather on\nthe inside. Provides a decent increase to CRI.",
+    "etypeId": 3,
+    "traits": [
+      {
+        "code": 22,
+        "dataId": 2,
+        "value": 0.03
+      }
+    ],
+    "iconIndex": 465,
+    "name": "Silver Mask",
+    "note": "<Upgrade Slots: 2>",
+    "params": [
+      0,
+      0,
+      4,
+      0,
+      0,
+      0,
+      10,
+      0
+    ],
+    "price": 1000
+  },
+  {
+    "id": 167,
+    "atypeId": 3,
+    "description": "Floppy to the max! The tip of the hat now sags enough to attract stray\nmagical particles in the air, increasing its power more than ever.",
+    "etypeId": 3,
+    "traits": [],
+    "iconIndex": 165,
+    "name": "Floppy Hat ★★",
+    "note": "<Upgrade Slots: 2>\n\n<Disassemble Pool: Basic>\nx4-x7 item 51: 100%\nx3-5 Yarn: 100%\n</Disassemble Pool: Basic>",
+    "params": [
+      0,
+      35,
+      0,
+      2,
+      15,
+      8,
+      0,
+      0
+    ],
+    "price": 1000
   }
 ]
