@@ -115,7 +115,7 @@ Additions:
    > Andrew's Ancient Crystal of The Trail's Amazing History
    > [REDACTED TROPHY]
    > [REDACTED TROPHY]
- - Added 72 new equipment items:
+ - Added 75 new equipment items:
   ~ 13 weapons:
    > Shadowspec Sword
    > Shadowspec Warhammer
@@ -139,8 +139,11 @@ Additions:
    > Tellurium Robes
    > Tellurium Vestments
    > Tellurium Leathers
-  ~ 4 headgear:
+  ~ 7 headgear:
    > Dapper-Looking Hat
+   > Floppy Hat ★★
+   > Silver Headband
+   > Silver Mask
    > Bunny Hood
    > Dragon Scale Helmet
    > Sorrowful Headpiece
